[gd_scene load_steps=10 format=3 uid="uid://bgsgcnyyv1gxm"]

[ext_resource type="Script" uid="uid://c3wcxx1myg0wb" path="res://Scripts/UI/map_spot_marker.gd" id="1_5x46s"]
[ext_resource type="PackedScene" uid="uid://d2vlvv0emlupr" path="res://Scenes/MapMarkers/ShipMarkerNotif.tscn" id="2_b0564"]
[ext_resource type="AudioStream" uid="uid://hrwbq66p4fq8" path="res://Assets/Sounds/radar-beeping-sound-effect-192404.mp3" id="3_625fb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gjj15"]
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 25
border_width_top = 25
border_width_right = 25
border_width_bottom = 25
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 70
corner_radius_top_right = 70
corner_radius_bottom_right = 70
corner_radius_bottom_left = 70
corner_detail = 4
anti_aliasing = false

[sub_resource type="Animation" id="Animation_pxthd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ph3na"]
resource_name = "SpotAnalyzed"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.76667, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_right")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_bottom")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer2:theme_override_styles/panel:border_color")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.06667, 4.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.0486369, 0.645335, 0.0400367, 1), Color(0.0486369, 0.645335, 0.0400367, 1), Color(0.049, 0.645, 0.04, 0)]
}

[sub_resource type="Animation" id="Animation_fxdlk"]
resource_name = "SpotFound"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.76667, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_left")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_top")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_right")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PanelContainer2:theme_override_styles/panel:expand_margin_bottom")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.73333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 500.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PanelContainer2:theme_override_styles/panel:border_color")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 4.06667, 4.73333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.252517, 0.622353, 0.846633, 1), Color(0.252517, 0.622353, 0.846633, 1), Color(0.253, 0.622, 0.847, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4iew2"]
_data = {
&"RESET": SubResource("Animation_pxthd"),
&"SpotAnalyzed": SubResource("Animation_ph3na"),
&"SpotFound": SubResource("Animation_fxdlk")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ey58"]
resource_local_to_scene = true
bg_color = Color(0.252517, 0.622353, 0.846633, 1)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.252517, 0.622353, 0.846633, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
corner_detail = 20
anti_aliasing = false

[node name="SpotMarker" type="Control" node_paths=PackedStringArray("SpotNameLabel", "SpotDropPosition")]
use_parent_material = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5x46s")
SpotNameLabel = NodePath("HBoxContainer/TextureRect2")
SpotDropPosition = NodePath("HBoxContainer")
NofiticationScene = ExtResource("2_b0564")
BeepSound = ExtResource("3_625fb")

[node name="AnalyzeButton" type="Panel" parent="."]
show_behind_parent = true
texture_filter = 4
use_parent_material = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -70.0
offset_right = 70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gjj15")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4iew2")
}

[node name="PanelContainer2" type="PanelContainer" parent="."]
visible = false
z_index = 2
use_parent_material = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ey58")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = -90.0
offset_right = 69.0
offset_bottom = -57.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = -2

[node name="TextureRect2" type="Label" parent="HBoxContainer"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.0522618, 0.0522618, 0.0522618, 1)
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 18
text = "Curdawa"
vertical_alignment = 1
justification_flags = 227
uppercase = true

[node name="VisibilityNotif" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -16.5)
scale = Vector2(7, 8.65)

[connection signal="screen_entered" from="VisibilityNotif" to="." method="EnteredScreen"]
[connection signal="screen_exited" from="VisibilityNotif" to="." method="ExitedScreen"]
